--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
         <h2 class="h5 mb-3">Trackers</h2>
         <div class="grid" role="navigation" aria-label="Trackers">
 
-          <a class="card" href="../Accounts/index.html">
+          <a class="card" href="Accounts/index.html">
             <span class="title">Account Management</span>
             <span class="desc">account and registration management</span>
             <span class="actions">
@@ -772,7 +772,7 @@
             </span>
           </a>
 
-          <a class="card" href="../QR-Attendance/index.html">
+          <a class="card" href="QR-Attendance/index.html">
             <span class="title">Attendance</span>
             <span class="desc">Barcode-based event attendance</span>
             <span class="actions">
@@ -780,7 +780,7 @@
             </span>
           </a>
           
-          <a class="card" href="../IGPRentalSystem/index.html">
+          <a class="card" href="IGPRentalSystem/index.html">
             <span class="title">IGP Rental System</span>
             <span class="desc">Inventory and equipment rentals</span>
             <span class="actions">
@@ -788,7 +788,7 @@
             </span>
           </a>
 
-          <a class="card" href="../MerchandiseTracker/index.html">
+          <a class="card" href="MerchandiseTracker/index.html">
             <span class="title">Merchandise Tracker</span>
             <span class="desc">Orders, pricing, and summaries</span>
             <span class="actions">
